--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <title> Rishab Arora</title>
 	<link href="css/style.css" rel="stylesheet">
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+	<meta name="theme-color" content="#663399" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
   <body>
     <header class="site-header"> 
